# panda_simulation

./: LICENSE  README.md
MatlabExamples/: AIC.m  FE_minimization.m  RealrobotDynamics.m
active_inference_msgs/: CMakeLists.txt  package.xml
active_inference_msgs/action/: ActiveInference.action
aruco_ros/aruco_ros/launch/: single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
franka_description/meshes/visual/: finger.dae  hand.dae  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae  marker.blend  marker.dae
franka_description/robots/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.xacro  panda_arm_camera.urdf.xacro  panda_arm_hand.urdf.xacro  panda_arm_model.urdf.xacro  panda_arm_world.urdf.xacro  panda_camera.gazebo.xacro  panda_camera.urdf.xacro  panda_camera.xacro
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/worlds/: my_world.world
panda_control/: CMakeLists.txt  package.xml
panda_control/include/: AIC.h  MRAC.h  generativeModel.h
panda_control/scripts/: armGoalAction.py  publisher.py
panda_control/src/: AIC.cpp  AIC_controller.cpp  AIC_controller_FDI.cpp  AIC_controller_single.cpp  MRAC_controller.cpp  generativeModel.cpp
panda_control/src/classes/: AIC.cpp  MRAC.cpp
panda_simulation/: CMakeLists.txt  LICENSE  README.md  package.xml
panda_simulation/config/: panda_control.yaml
panda_simulation/launch/: simulation.launch  simulation_FDI.launch  simulation_single.launch
